# FastForward

./: .gitignore  CMakeLists.txt  README.md  ekmek.cpp  main.cpp  tensor.hpp
benchmark/: benchmark_conv2d.cpp  benchmarks.md
core/: shape.cpp  shape.hpp  tensor.cpp  tensor.hpp  tensor.tpp
include/: binary_primitives.hpp  conv.hpp  conv2d.hpp  copy.hpp  iterator.hpp  matmul.h  ops.hpp  primitives.hpp  reduce.hpp  shape.hpp  tensor.hpp  unary_primitives.hpp  utils.hpp
src/: binary_ops.cpp  binary_primitives.cpp  conv.cpp  copy.cpp  matmul.cpp  maxpool.cpp  ops.cpp  shape.cpp  tensor.cpp  unary_primitives.cpp  utils.cpp
tests/: test_broadcast_shape.cpp  test_conv2d.cpp  test_matmul.cpp
